absplayer/src/abc/parser/AbcParser.java
// Generated from Abc.g4 by ANTLR 4.5.1

package abc.parser;
// Do not edit this .java file! Edit the .g4 file and re-run Antlr.

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AbcParser extends Parser {
  static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

  protected static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache =
    new PredictionContextCache();
  public static final int
    T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
    T__9=10, T__10=11, SMALL_M=12, BAR=13, LEFT_C=14, RIGHT_C=15, COLON=16, 
    SMALL_Z=17, SMALL_B=18, BIG_C=19, FLAT=20, UPPER=21, KEY=22, LOWER_KEY=23, 
    EQUAL=24, COMMA=25, SINGLE_Q=26, NUMBER=27, SPACE=28, DOT=29, SLASH=30, 
    NEWLINE=31, ALPHA=32;
  public static final int
    RULE_root = 0, RULE_headers = 1, RULE_indexHeader = 2, RULE_titleHeader = 3, 
    RULE_keyHeader = 4, RULE_otherHeader = 5, RULE_meterHeader = 6, RULE_lengthHeader = 7, 
    RULE_tempoHeader = 8, RULE_composerHeader = 9, RULE_voiceHeader = 10, 
    RULE_body = 11, RULE_sharp = 12, RULE_comment = 13, RULE_repeat_start = 14, 
    RULE_repeat_end = 15, RULE_ending = 16, RULE_section = 17, RULE_chord = 18, 
    RULE_tuplet = 19, RULE_note = 20, RULE_rest = 21, RULE_note_length = 22, 
    RULE_accidentals = 23, RULE_end_bar = 24, RULE_fraction = 25, RULE_lower_key = 26, 
    RULE_key = 27, RULE_name = 28;
  public static final String[] ruleNames = {
    "root", "headers", "indexHeader", "titleHeader", "keyHeader", "otherHeader", 
    "meterHeader", "lengthHeader", "tempoHeader", "composerHeader", "voiceHeader", 
    "body", "sharp", "comment", "repeat_start", "repeat_end", "ending", 
    "section", "chord", "tuplet", "note", "rest", "note_length", "accidentals", 
    "end_bar", "fraction", "lower_key", "key", "name"
  };

  private static final String[] _LITERAL_NAMES = {
    null, "'X:'", "'T:'", "'K:'", "'M:'", "'L:'", "'Q:'", "'C:'", "'V:'", 
    "'#'", "'%'", "'('", "'m'", "'|'", "'['", "']'", "':'", "'z'", "'b'", 
    "'C'", "'_'", "'^'", null, null, "'='", "','", "'''", null, "' '", "'.'", 
    "'/'"
  };
  private static final String[] _SYMBOLIC_NAMES = {
    null, null, null, null, null, null, null, null, null, null, null, null, 
    "SMALL_M", "BAR", "LEFT_C", "RIGHT_C", "COLON", "SMALL_Z", "SMALL_B", 
    "BIG_C", "FLAT", "UPPER", "KEY", "LOWER_KEY", "EQUAL", "COMMA", "SINGLE_Q", 
    "NUMBER", "SPACE", "DOT", "SLASH", "NEWLINE", "ALPHA"
  };
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  /**
   * @deprecated Use {@link #VOCABULARY} instead.
   */
  @Deprecated
  public static final String[] tokenNames;
  static {
    tokenNames = new String[_SYMBOLIC_NAMES.length];
    for (int i = 0; i < tokenNames.length; i++) {
      tokenNames[i] = VOCABULARY.getLiteralName(i);
      if (tokenNames[i] == null) {
        tokenNames[i] = VOCABULARY.getSymbolicName(i);
      }

      if (tokenNames[i] == null) {
        tokenNames[i] = "<INVALID>";
      }
    }
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
    return tokenNames;
  }

  @Override

  public Vocabulary getVocabulary() {
    return VOCABULARY;
  }

  @Override
  public String getGrammarFileName() { return "Abc.g4"; }

  @Override
  public String[] getRuleNames() { return ruleNames; }

  @Override
  public String getSerializedATN() { return _serializedATN; }

  @Override
  public ATN getATN() { return _ATN; }


      // This method makes the parser stop running if it encounters
      // invalid input and throw a RuntimeException.
      public void reportErrorsAsExceptions() {
          // To prevent any reports to standard error, add this line:
          //removeErrorListeners();
          
          addErrorListener(new BaseErrorListener() {
              public void syntaxError(Recognizer<?, ?> recognizer,
                                      Object offendingSymbol, 
                                      int line, int charPositionInLine,
                                      String msg, RecognitionException e) {
                  throw new ParseCancellationException(msg, e);
              }
          });
      }

  public AbcParser(TokenStream input) {
    super(input);
    _interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
  }
  public static class RootContext extends ParserRuleContext {
    public HeadersContext headers() {
      return getRuleContext(HeadersContext.class,0);
    }
    public BodyContext body() {
      return getRuleContext(BodyContext.class,0);
    }
    public TerminalNode EOF() { return getToken(AbcParser.EOF, 0); }
    public RootContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_root; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterRoot(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitRoot(this);
    }
  }

  public final RootContext root() throws RecognitionException {
    RootContext _localctx = new RootContext(_ctx, getState());
    enterRule(_localctx, 0, RULE_root);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(58);
      headers();
      setState(59);
      body();
      setState(60);
      match(EOF);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class HeadersContext extends ParserRuleContext {
    public IndexHeaderContext indexHeader() {
      return getRuleContext(IndexHeaderContext.class,0);
    }
    public TitleHeaderContext titleHeader() {
      return getRuleContext(TitleHeaderContext.class,0);
    }
    public KeyHeaderContext keyHeader() {
      return getRuleContext(KeyHeaderContext.class,0);
    }
    public List<OtherHeaderContext> otherHeader() {
      return getRuleContexts(OtherHeaderContext.class);
    }
    public OtherHeaderContext otherHeader(int i) {
      return getRuleContext(OtherHeaderContext.class,i);
    }
    public HeadersContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_headers; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterHeaders(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitHeaders(this);
    }
  }

  public final HeadersContext headers() throws RecognitionException {
    HeadersContext _localctx = new HeadersContext(_ctx, getState());
    enterRule(_localctx, 2, RULE_headers);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(62);
      indexHeader();
      setState(63);
      titleHeader();
      setState(67);
      _errHandler.sync(this);
      _la = _input.LA(1);
      while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7))) != 0)) {
        {
        {
        setState(64);
        otherHeader();
        }
        }
        setState(69);
        _errHandler.sync(this);
        _la = _input.LA(1);
      }
      setState(70);
      keyHeader();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class IndexHeaderContext extends ParserRuleContext {
    public TerminalNode NUMBER() { return getToken(AbcParser.NUMBER, 0); }
    public TerminalNode NEWLINE() { return getToken(AbcParser.NEWLINE, 0); }
    public IndexHeaderContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_indexHeader; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterIndexHeader(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitIndexHeader(this);
    }
  }

  public final IndexHeaderContext indexHeader() throws RecognitionException {
    IndexHeaderContext _localctx = new IndexHeaderContext(_ctx, getState());
    enterRule(_localctx, 4, RULE_indexHeader);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(72);
      match(T__0);
      setState(73);
      match(NUMBER);
      setState(74);
      match(NEWLINE);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class TitleHeaderContext extends ParserRuleContext {
    public NameContext name() {
      return getRuleContext(NameContext.class,0);
    }
    public TerminalNode NEWLINE() { return getToken(AbcParser.NEWLINE, 0); }
    public TitleHeaderContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_titleHeader; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterTitleHeader(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitTitleHeader(this);
    }
  }

  public final TitleHeaderContext titleHeader() throws RecognitionException {
    TitleHeaderContext _localctx = new TitleHeaderContext(_ctx, getState());
    enterRule(_localctx, 6, RULE_titleHeader);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(76);
      match(T__1);
      setState(77);
      name();
      setState(78);
      match(NEWLINE);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class KeyHeaderContext extends ParserRuleContext {
    public KeyContext key() {
      return getRuleContext(KeyContext.class,0);
    }
    public TerminalNode NEWLINE() { return getToken(AbcParser.NEWLINE, 0); }
    public SharpContext sharp() {
      return getRuleContext(SharpContext.class,0);
    }
    public TerminalNode SMALL_M() { return getToken(AbcParser.SMALL_M, 0); }
    public KeyHeaderContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_keyHeader; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterKeyHeader(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitKeyHeader(this);
    }
  }

  public final KeyHeaderContext keyHeader() throws RecognitionException {
    KeyHeaderContext _localctx = new KeyHeaderContext(_ctx, getState());
    enterRule(_localctx, 8, RULE_keyHeader);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(80);
      match(T__2);
      setState(81);
      key();
      setState(83);
      _la = _input.LA(1);
      if (_la==T__8 || _la==SMALL_B) {
        {
        setState(82);
        sharp();
        }
      }

      setState(86);
      _la = _input.LA(1);
      if (_la==SMALL_M) {
        {
        setState(85);
        match(SMALL_M);
        }
      }

      setState(88);
      match(NEWLINE);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class OtherHeaderContext extends ParserRuleContext {
    public MeterHeaderContext meterHeader() {
      return getRuleContext(MeterHeaderContext.class,0);
    }
    public LengthHeaderContext lengthHeader() {
      return getRuleContext(LengthHeaderContext.class,0);
    }
    public TempoHeaderContext tempoHeader() {
      return getRuleContext(TempoHeaderContext.class,0);
    }
    public ComposerHeaderContext composerHeader() {
      return getRuleContext(ComposerHeaderContext.class,0);
    }
    public VoiceHeaderContext voiceHeader() {
      return getRuleContext(VoiceHeaderContext.class,0);
    }
    public OtherHeaderContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_otherHeader; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterOtherHeader(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitOtherHeader(this);
    }
  }

  public final OtherHeaderContext otherHeader() throws RecognitionException {
    OtherHeaderContext _localctx = new OtherHeaderContext(_ctx, getState());
    enterRule(_localctx, 10, RULE_otherHeader);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(95);
      switch (_input.LA(1)) {
      case T__3:
        {
        setState(90);
        meterHeader();
        }
        break;
      case T__4:
        {
        setState(91);
        lengthHeader();
        }
        break;
      case T__5:
        {
        setState(92);
        tempoHeader();
        }
        break;
      case T__6:
        {
        setState(93);
        composerHeader();
        }
        break;
      case T__7:
        {
        setState(94);
        voiceHeader();
        }
        break;
      default:
        throw new NoViableAltException(this);
      }
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class MeterHeaderContext extends ParserRuleContext {
    public TerminalNode NEWLINE() { return getToken(AbcParser.NEWLINE, 0); }
    public FractionContext fraction() {
      return getRuleContext(FractionContext.class,0);
    }
    public TerminalNode BIG_C() { return getToken(AbcParser.BIG_C, 0); }
    public TerminalNode BAR() { return getToken(AbcParser.BAR, 0); }
    public MeterHeaderContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_meterHeader; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterMeterHeader(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitMeterHeader(this);
    }
  }

  public final MeterHeaderContext meterHeader() throws RecognitionException {
    MeterHeaderContext _localctx = new MeterHeaderContext(_ctx, getState());
    enterRule(_localctx, 12, RULE_meterHeader);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(97);
      match(T__3);
      setState(102);
      switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
      case 1:
        {
        setState(98);
        fraction();
        }
        break;
      case 2:
        {
        setState(99);
        match(BIG_C);
        }
        break;
      case 3:
        {
        setState(100);
        match(BIG_C);
        setState(101);
        match(BAR);
        }
        break;
      }
      setState(104);
      match(NEWLINE);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class LengthHeaderContext extends ParserRuleContext {
    public FractionContext fraction() {
      return getRuleContext(FractionContext.class,0);
    }
    public TerminalNode NEWLINE() { return getToken(AbcParser.NEWLINE, 0); }
    public LengthHeaderContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_lengthHeader; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterLengthHeader(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitLengthHeader(this);
    }
  }

  public final LengthHeaderContext lengthHeader() throws RecognitionException {
    LengthHeaderContext _localctx = new LengthHeaderContext(_ctx, getState());
    enterRule(_localctx, 14, RULE_lengthHeader);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(106);
      match(T__4);
      setState(107);
      fraction();
      setState(108);
      match(NEWLINE);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class TempoHeaderContext extends ParserRuleContext {
    public FractionContext fraction() {
      return getRuleContext(FractionContext.class,0);
    }
    public TerminalNode EQUAL() { return getToken(AbcParser.EQUAL, 0); }
    public TerminalNode NUMBER() { return getToken(AbcParser.NUMBER, 0); }
    public TerminalNode NEWLINE() { return getToken(AbcParser.NEWLINE, 0); }
    public TempoHeaderContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_tempoHeader; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterTempoHeader(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitTempoHeader(this);
    }
  }

  public final TempoHeaderContext tempoHeader() throws RecognitionException {
    TempoHeaderContext _localctx = new TempoHeaderContext(_ctx, getState());
    enterRule(_localctx, 16, RULE_tempoHeader);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(110);
      match(T__5);
      setState(111);
      fraction();
      setState(112);
      match(EQUAL);
      setState(113);
      match(NUMBER);
      setState(114);
      match(NEWLINE);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class ComposerHeaderContext extends ParserRuleContext {
    public NameContext name() {
      return getRuleContext(NameContext.class,0);
    }
    public TerminalNode NEWLINE() { return getToken(AbcParser.NEWLINE, 0); }
    public ComposerHeaderContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_composerHeader; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterComposerHeader(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitComposerHeader(this);
    }
  }

  public final ComposerHeaderContext composerHeader() throws RecognitionException {
    ComposerHeaderContext _localctx = new ComposerHeaderContext(_ctx, getState());
    enterRule(_localctx, 18, RULE_composerHeader);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(116);
      match(T__6);
      setState(117);
      name();
      setState(118);
      match(NEWLINE);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class VoiceHeaderContext extends ParserRuleContext {
    public NameContext name() {
      return getRuleContext(NameContext.class,0);
    }
    public TerminalNode NEWLINE() { return getToken(AbcParser.NEWLINE, 0); }
    public VoiceHeaderContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_voiceHeader; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterVoiceHeader(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitVoiceHeader(this);
    }
  }

  public final VoiceHeaderContext voiceHeader() throws RecognitionException {
    VoiceHeaderContext _localctx = new VoiceHeaderContext(_ctx, getState());
    enterRule(_localctx, 20, RULE_voiceHeader);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(120);
      match(T__7);
      setState(121);
      name();
      setState(122);
      match(NEWLINE);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class BodyContext extends ParserRuleContext {
    public List<SectionContext> section() {
      return getRuleContexts(SectionContext.class);
    }
    public SectionContext section(int i) {
      return getRuleContext(SectionContext.class,i);
    }
    public List<TerminalNode> BAR() { return getTokens(AbcParser.BAR); }
    public TerminalNode BAR(int i) {
      return getToken(AbcParser.BAR, i);
    }
    public List<TerminalNode> NEWLINE() { return getTokens(AbcParser.NEWLINE); }
    public TerminalNode NEWLINE(int i) {
      return getToken(AbcParser.NEWLINE, i);
    }
    public List<VoiceHeaderContext> voiceHeader() {
      return getRuleContexts(VoiceHeaderContext.class);
    }
    public VoiceHeaderContext voiceHeader(int i) {
      return getRuleContext(VoiceHeaderContext.class,i);
    }
    public List<CommentContext> comment() {
      return getRuleContexts(CommentContext.class);
    }
    public CommentContext comment(int i) {
      return getRuleContext(CommentContext.class,i);
    }
    public List<Repeat_startContext> repeat_start() {
      return getRuleContexts(Repeat_startContext.class);
    }
    public Repeat_startContext repeat_start(int i) {
      return getRuleContext(Repeat_startContext.class,i);
    }
    public List<Repeat_endContext> repeat_end() {
      return getRuleContexts(Repeat_endContext.class);
    }
    public Repeat_endContext repeat_end(int i) {
      return getRuleContext(Repeat_endContext.class,i);
    }
    public List<End_barContext> end_bar() {
      return getRuleContexts(End_barContext.class);
    }
    public End_barContext end_bar(int i) {
      return getRuleContext(End_barContext.class,i);
    }
    public BodyContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_body; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterBody(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitBody(this);
    }
  }

  public final BodyContext body() throws RecognitionException {
    BodyContext _localctx = new BodyContext(_ctx, getState());
    enterRule(_localctx, 22, RULE_body);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(132); 
      _errHandler.sync(this);
      _la = _input.LA(1);
      do {
        {
        setState(132);
        switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
        case 1:
          {
          setState(124);
          section();
          }
          break;
        case 2:
          {
          setState(125);
          match(BAR);
          }
          break;
        case 3:
          {
          setState(126);
          match(NEWLINE);
          }
          break;
        case 4:
          {
          setState(127);
          voiceHeader();
          }
          break;
        case 5:
          {
          setState(128);
          comment();
          }
          break;
        case 6:
          {
          setState(129);
          repeat_start();
          }
          break;
        case 7:
          {
          setState(130);
          repeat_end();
          }
          break;
        case 8:
          {
          setState(131);
          end_bar();
          }
          break;
        }
        }
        setState(134); 
        _errHandler.sync(this);
        _la = _input.LA(1);
      } while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__9) | (1L << T__10) | (1L << BAR) | (1L << LEFT_C) | (1L << COLON) | (1L << SMALL_Z) | (1L << SMALL_B) | (1L << BIG_C) | (1L << FLAT) | (1L << UPPER) | (1L << KEY) | (1L << LOWER_KEY) | (1L << EQUAL) | (1L << NEWLINE))) != 0) );
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class SharpContext extends ParserRuleContext {
    public TerminalNode SMALL_B() { return getToken(AbcParser.SMALL_B, 0); }
    public SharpContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_sharp; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterSharp(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitSharp(this);
    }
  }

  public final SharpContext sharp() throws RecognitionException {
    SharpContext _localctx = new SharpContext(_ctx, getState());
    enterRule(_localctx, 24, RULE_sharp);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(136);
      _la = _input.LA(1);
      if ( !(_la==T__8 || _la==SMALL_B) ) {
      _errHandler.recoverInline(this);
      } else {
        consume();
      }
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class CommentContext extends ParserRuleContext {
    public TerminalNode NEWLINE() { return getToken(AbcParser.NEWLINE, 0); }
    public NameContext name() {
      return getRuleContext(NameContext.class,0);
    }
    public CommentContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_comment; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterComment(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitComment(this);
    }
  }

  public final CommentContext comment() throws RecognitionException {
    CommentContext _localctx = new CommentContext(_ctx, getState());
    enterRule(_localctx, 26, RULE_comment);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(138);
      match(T__9);
      setState(140);
      _la = _input.LA(1);
      if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SMALL_M) | (1L << SMALL_Z) | (1L << SMALL_B) | (1L << BIG_C) | (1L << KEY) | (1L << LOWER_KEY) | (1L << COMMA) | (1L << SINGLE_Q) | (1L << NUMBER) | (1L << SPACE) | (1L << DOT) | (1L << ALPHA))) != 0)) {
        {
        setState(139);
        name();
        }
      }

      setState(142);
      match(NEWLINE);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class Repeat_startContext extends ParserRuleContext {
    public TerminalNode BAR() { return getToken(AbcParser.BAR, 0); }
    public TerminalNode COLON() { return getToken(AbcParser.COLON, 0); }
    public Repeat_startContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_repeat_start; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterRepeat_start(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitRepeat_start(this);
    }
  }

  public final Repeat_startContext repeat_start() throws RecognitionException {
    Repeat_startContext _localctx = new Repeat_startContext(_ctx, getState());
    enterRule(_localctx, 28, RULE_repeat_start);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(144);
      match(BAR);
      setState(145);
      match(COLON);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class Repeat_endContext extends ParserRuleContext {
    public TerminalNode COLON() { return getToken(AbcParser.COLON, 0); }
    public TerminalNode BAR() { return getToken(AbcParser.BAR, 0); }
    public Repeat_endContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_repeat_end; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterRepeat_end(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitRepeat_end(this);
    }
  }

  public final Repeat_endContext repeat_end() throws RecognitionException {
    Repeat_endContext _localctx = new Repeat_endContext(_ctx, getState());
    enterRule(_localctx, 30, RULE_repeat_end);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(147);
      match(COLON);
      setState(148);
      match(BAR);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }
